--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -357,7 +357,7 @@ body {
 }
 
 .slider {
-  width: 100vw;
+  width: 100%;
   position: relative;
   &__container {
     overflow: hidden;
@@ -367,7 +367,7 @@ body {
     transition: 0.2s;
   }
   &__item {
-    width: 25vw;
+    width: 25%;
     cursor: pointer;
   }
 }
