--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -369,7 +369,7 @@ body {
   }
   &__item {
     width: 25%;
-    min-height: 125px;
+
     max-height: 480px;
     cursor: pointer;
   }
@@ -716,7 +716,7 @@ body {
   }
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 425px) {
   .home-section__wrap_title > a {
     font-size: 20px;
   }
@@ -748,6 +748,10 @@ body {
   .place-section__btn {
     width: 110px;
     height: 25px;
+  }
+
+  .slider__item {
+    max-height: 80px;
   }
 
   .foot__wrap__contacts h2 {
