--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -370,7 +370,7 @@ body {
   &__item {
     width: 25%;
 
-    max-height: 800px;
+    max-height: 480px;
     cursor: pointer;
   }
 }
@@ -683,6 +683,10 @@ body {
     font-size: 20px;
   }
 
+  .slider__item {
+    max-height: 500px;
+  }
+
   .foot__wrap {
     display: inline-block;
     padding-top: 10px;
@@ -751,7 +755,7 @@ body {
   }
 
   .slider__item {
-    max-height: 300px;
+    max-height: 110px;
   }
 
   .foot__wrap__contacts h2 {
