--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Teko:wght@300;400;500;600;700&display=swap");
 body {
   max-width: 1920px;
   overflow-x: hidden;
@@ -12,7 +14,6 @@ body {
 }
 
 .adress {
-  font-family: "PT Sans Narrow", sans-serif;
   font-size: 16px;
   letter-spacing: 0.05em;
 }
@@ -38,7 +39,6 @@ body {
 }
 
 .menu__link {
-  font-family: "PT Sans Narrow", sans-serif;
   font-size: 18px;
   color: #2f2e2e;
 }
@@ -61,10 +61,6 @@ body {
 
 .nav__menu.menu.login > li {
   margin-right: 10px;
-}
-
-.nav__menu.menu.login > li:first-child {
-  margin-right: 50px;
 }
 
 .menu__login_img {
@@ -159,16 +155,6 @@ body {
     font-size: 24px;
   }
 }
-@media screen and (max-width: 640px) {
-  .home-section__title_hand {
-    font-size: 20px;
-  }
-}
-@media screen and (max-width: 375px) {
-  .home-section__title_hand {
-    font-size: 16px;
-  }
-}
 .home-section__title_ice {
   color: white;
   font-size: 112px;
@@ -186,16 +172,6 @@ body {
     font-size: 50px;
   }
 }
-@media screen and (max-width: 640px) {
-  .home-section__title_ice {
-    font-size: 40px;
-  }
-}
-@media screen and (max-width: 375px) {
-  .home-section__title_ice {
-    font-size: 22px;
-  }
-}
 .home-section__title_btn {
   width: 130px;
   height: 42px;
@@ -209,17 +185,13 @@ body {
 }
 @media screen and (max-width: 768px) {
   .home-section__title_btn {
+    width: 90px;
+    height: 30px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .home-section__title_btn {
     font-size: 20px;
-  }
-}
-@media screen and (max-width: 640px) {
-  .home-section__title_btn {
-    font-size: 18px;
-  }
-}
-@media screen and (max-width: 375px) {
-  .home-section__title_btn {
-    font-size: 16px;
   }
 }
 .home-section__title_btn:hover {
@@ -252,11 +224,6 @@ body {
     font-size: 24px;
   }
 }
-@media screen and (max-width: 640px) {
-  .flavour-section__title {
-    font-size: 20px;
-  }
-}
 .flavour-section__sub {
   font-family: "Dancing Script";
   font-size: 24px;
@@ -267,12 +234,6 @@ body {
 @media screen and (max-width: 768px) {
   .flavour-section__sub {
     font-size: 18px;
-  }
-}
-@media screen and (max-width: 640px) {
-  .flavour-section__sub {
-    font-size: 16px;
-    margin-top: 7px;
   }
 }
 .flavour-section__par {
@@ -286,20 +247,7 @@ body {
 @media screen and (max-width: 768px) {
   .flavour-section__par {
     font-size: 14px;
-  }
-}
-@media screen and (max-width: 640px) {
-  .flavour-section__par {
-    font-size: 10px;
-    width: 75%;
-    margin-top: 10px;
-  }
-}
-@media screen and (max-width: 375px) {
-  .flavour-section__par {
-    font-size: 9px;
-    width: 80%;
-    margin-top: 5px;
+    margin-top: 20px;
   }
 }
 .flavour-section__btn {
@@ -314,19 +262,14 @@ body {
 }
 @media screen and (max-width: 768px) {
   .flavour-section__btn {
+    width: 90px;
+    height: 30px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .flavour-section__btn {
     font-size: 20px;
-  }
-}
-@media screen and (max-width: 640px) {
-  .flavour-section__btn {
-    font-size: 18px;
-    margin-top: 10px;
-  }
-}
-@media screen and (max-width: 375px) {
-  .flavour-section__btn {
-    font-size: 12px;
-    margin-top: 5px;
+    margin-top: 20px;
   }
 }
 .flavour-section__btn:hover {
@@ -365,16 +308,6 @@ body {
     font-size: 24px;
   }
 }
-@media screen and (max-width: 640px) {
-  .block-enjoy__par {
-    font-size: 20px;
-  }
-}
-@media screen and (max-width: 375px) {
-  .block-enjoy__par {
-    font-size: 16px;
-  }
-}
 .block-enjoy__title {
   color: white;
   font-size: 112px;
@@ -392,16 +325,6 @@ body {
     font-size: 50px;
   }
 }
-@media screen and (max-width: 640px) {
-  .block-enjoy__title {
-    font-size: 40px;
-  }
-}
-@media screen and (max-width: 375px) {
-  .block-enjoy__title {
-    font-size: 22px;
-  }
-}
 .block-enjoy__btn {
   width: 130px;
   height: 42px;
@@ -415,17 +338,13 @@ body {
 }
 @media screen and (max-width: 768px) {
   .block-enjoy__btn {
+    width: 90px;
+    height: 30px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .block-enjoy__btn {
     font-size: 20px;
-  }
-}
-@media screen and (max-width: 640px) {
-  .block-enjoy__btn {
-    font-size: 18px;
-  }
-}
-@media screen and (max-width: 375px) {
-  .block-enjoy__btn {
-    font-size: 16px;
   }
 }
 .block-enjoy__btn:hover {
@@ -459,11 +378,6 @@ body {
     font-size: 24px;
   }
 }
-@media screen and (max-width: 640px) {
-  .place-section__title {
-    font-size: 20px;
-  }
-}
 .place-section__sub {
   font-family: "Dancing Script";
   font-size: 24px;
@@ -474,12 +388,6 @@ body {
 @media screen and (max-width: 768px) {
   .place-section__sub {
     font-size: 18px;
-  }
-}
-@media screen and (max-width: 640px) {
-  .place-section__sub {
-    font-size: 16px;
-    margin-top: 7px;
   }
 }
 .place-section__par {
@@ -493,24 +401,11 @@ body {
 @media screen and (max-width: 768px) {
   .place-section__par {
     font-size: 14px;
-  }
-}
-@media screen and (max-width: 640px) {
-  .place-section__par {
-    font-size: 10px;
-    width: 75%;
-    margin-top: 10px;
-  }
-}
-@media screen and (max-width: 375px) {
-  .place-section__par {
-    font-size: 9px;
-    width: 80%;
-    margin-top: 5px;
+    margin-top: 20px;
   }
 }
 .place-section__btn {
-  width: 200px;
+  width: 190px;
   height: 42px;
   border: 2px solid #2f2e2e;
   background-color: transparent;
@@ -521,19 +416,14 @@ body {
 }
 @media screen and (max-width: 768px) {
   .place-section__btn {
+    width: 140px;
+    height: 30px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .place-section__btn {
     font-size: 20px;
-  }
-}
-@media screen and (max-width: 640px) {
-  .place-section__btn {
-    font-size: 18px;
-    margin-top: 10px;
-  }
-}
-@media screen and (max-width: 375px) {
-  .place-section__btn {
-    font-size: 12px;
-    margin-top: 5px;
+    margin-top: 20px;
   }
 }
 .place-section__btn:hover {
@@ -572,16 +462,6 @@ body {
     font-size: 24px;
   }
 }
-@media screen and (max-width: 640px) {
-  .block-event__par {
-    font-size: 20px;
-  }
-}
-@media screen and (max-width: 375px) {
-  .block-event__par {
-    font-size: 16px;
-  }
-}
 .block-event__title {
   color: white;
   font-size: 112px;
@@ -599,16 +479,6 @@ body {
     font-size: 50px;
   }
 }
-@media screen and (max-width: 640px) {
-  .block-event__title {
-    font-size: 40px;
-  }
-}
-@media screen and (max-width: 375px) {
-  .block-event__title {
-    font-size: 22px;
-  }
-}
 .block-event__btn {
   width: 190px;
   height: 42px;
@@ -622,17 +492,13 @@ body {
 }
 @media screen and (max-width: 768px) {
   .block-event__btn {
+    width: 140px;
+    height: 30px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .block-event__btn {
     font-size: 20px;
-  }
-}
-@media screen and (max-width: 640px) {
-  .block-event__btn {
-    font-size: 18px;
-  }
-}
-@media screen and (max-width: 375px) {
-  .block-event__btn {
-    font-size: 16px;
   }
 }
 .block-event__btn:hover {
@@ -665,11 +531,6 @@ body {
     font-size: 24px;
   }
 }
-@media screen and (max-width: 640px) {
-  .desserts-section__title {
-    font-size: 20px;
-  }
-}
 .desserts-section__sub {
   font-family: "Dancing Script";
   font-size: 24px;
@@ -680,12 +541,6 @@ body {
 @media screen and (max-width: 768px) {
   .desserts-section__sub {
     font-size: 18px;
-  }
-}
-@media screen and (max-width: 640px) {
-  .desserts-section__sub {
-    font-size: 16px;
-    margin-top: 7px;
   }
 }
 .desserts-section__par {
@@ -699,20 +554,7 @@ body {
 @media screen and (max-width: 768px) {
   .desserts-section__par {
     font-size: 14px;
-  }
-}
-@media screen and (max-width: 640px) {
-  .desserts-section__par {
-    font-size: 10px;
-    width: 75%;
-    margin-top: 10px;
-  }
-}
-@media screen and (max-width: 375px) {
-  .desserts-section__par {
-    font-size: 9px;
-    width: 80%;
-    margin-top: 5px;
+    margin-top: 20px;
   }
 }
 .desserts-section__btn {
@@ -727,19 +569,14 @@ body {
 }
 @media screen and (max-width: 768px) {
   .desserts-section__btn {
+    width: 90px;
+    height: 30px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .desserts-section__btn {
     font-size: 20px;
-  }
-}
-@media screen and (max-width: 640px) {
-  .desserts-section__btn {
-    font-size: 18px;
-    margin-top: 10px;
-  }
-}
-@media screen and (max-width: 375px) {
-  .desserts-section__btn {
-    font-size: 12px;
-    margin-top: 5px;
+    margin-top: 20px;
   }
 }
 .desserts-section__btn:hover {
@@ -992,6 +829,7 @@ body {
     padding: 10px 0;
     opacity: 0;
     transition: opacity 100ms;
+    background-color: rgba(119, 118, 118, 0.5);
   }
 
   .nav .menu__link {
@@ -1063,17 +901,6 @@ body {
     width: 35vw;
   }
 
-  .flavour-section__btn,
-.desserts-section__btn {
-    width: 90px;
-    height: 30px;
-  }
-
-  .place-section__btn {
-    width: 140px;
-    height: 30px;
-  }
-
   .block-enjoy {
     height: 360px;
   }
@@ -1111,6 +938,10 @@ body {
     width: 100vw;
   }
 
+  .foot__wrap__contacts p {
+    line-height: 15px;
+  }
+
   .foot__wrap__site {
     margin-left: 5px;
     margin-top: 5px;
@@ -1135,39 +966,56 @@ body {
     font-size: 20px;
   }
 
-  .home-section__title_btn {
-    width: 100px;
-    height: 30px;
+  .flavour-section {
+    display: inline-block;
   }
-
-  .flavour-section__btn,
-.desserts-section__btn {
-    width: 70px;
-    height: 25px;
-  }
-
   .flavour-section img {
-    height: 250px;
+    width: 100vw;
     object-fit: cover;
   }
+  .flavour-section__text {
+    height: 250px;
+  }
 
+  .place-section {
+    display: inline-block;
+  }
   .place-section img {
-    height: 250px;
+    width: 100vw;
     object-fit: cover;
   }
+  .place-section__text {
+    height: 250px;
+  }
 
+  .desserts-section {
+    display: inline-block;
+  }
   .desserts-section img {
-    height: 250px;
+    width: 100vw;
     object-fit: cover;
   }
+  .desserts-section__text {
+    height: 250px;
+  }
 
-  .place-section__btn {
-    width: 110px;
-    height: 25px;
+  .scoop-of-ice__wrap {
+    height: 260px;
   }
 
   .slider__item {
-    max-height: 150px;
+    max-height: 220px;
+    width: 50%;
+  }
+
+  .btn-prev img {
+    opacity: 1;
+    width: 5vw;
+  }
+
+  .btn-next img {
+    opacity: 1;
+    width: 5vw;
   }
 
   .foot__wrap__contacts h2 {
