--- a/flavors/styles/styles.scss
+++ b/flavors/styles/styles.scss
@@ -410,14 +410,9 @@ body {
   }
 }
 
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 768px) {
   .adress {
     font-size: 10px;
-  }
-
-  .home-section__wrap_img > img {
-    width: 228px;
-    height: 393px;
   }
 
   .home-section {
@@ -441,6 +436,25 @@ body {
   .nav__menu.menu.login {
     width: 35vw;
   }
+
+  // ==========
+  .section__wrap {
+    height: 3000px;
+  }
+
+  .flavour-section__ice_img img {
+    width: 45vw;
+  }
+
+  .flavour-section__ice_img img {
+    width: 45vw;
+  }
+
+  .flavour-section__ice__box {
+    width: 50%;
+  }
+
+  // ========
 
   .foot__wrap {
     display: inline-block;
@@ -475,9 +489,13 @@ body {
   }
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 425px) {
   .home-section__wrap_title > a {
     font-size: 20px;
+  }
+
+  .flavour-section__ice {
+    width: 400px;
   }
 
   .foot__wrap__contacts h2 {
