--- a/flavors/css/styles.css
+++ b/flavors/css/styles.css
@@ -157,7 +157,7 @@ body {
 }
 @media screen and (max-width: 375px) {
   .home-section__title_hand {
-    font-size: 16px;
+    font-size: 14px;
   }
 }
 .home-section__title_ice {
@@ -180,6 +180,13 @@ body {
 @media screen and (max-width: 640px) {
   .home-section__title_ice {
     font-size: 30px;
+    letter-spacing: 30px;
+  }
+}
+@media screen and (max-width: 375px) {
+  .home-section__title_ice {
+    font-size: 22px;
+    letter-spacing: 20px;
   }
 }
 
@@ -548,6 +555,17 @@ body {
 
   .foot__wrap__form button {
     font-size: 12px;
+  }
+}
+@media screen and (max-width: 375px) {
+  .flavour-section__ice {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .section__wrap {
+    height: 5450px;
   }
 }
 /*# sourceMappingURL=styles.css.map */
