--- a/flavors/styles/mixins.scss
+++ b/flavors/styles/mixins.scss
@@ -10,7 +10,7 @@
     font-size: 20px;
   }
   @media screen and (max-width: 375px) {
-    font-size: 16px;
+    font-size: 14px;
   }
 }
 
@@ -28,6 +28,11 @@
   }
   @media screen and (max-width: 640px) {
     font-size: 30px;
+    letter-spacing: 30px;
+  }
+  @media screen and (max-width: 375px) {
+    font-size: 22px;
+    letter-spacing: 20px;
   }
 }
 
