--- a/flavors/styles/styles.scss
+++ b/flavors/styles/styles.scss
@@ -522,4 +522,17 @@ body {
     font-size: 12px;
   }
 }
+
+@media screen and (max-width: 375px) {
+  .flavour-section__ice {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .section__wrap {
+    height: 5450px;
+  }
+}
+
 /*# sourceMappingURL=styles.css.map */
