--- a/bookAnEvent/css/styles.css
+++ b/bookAnEvent/css/styles.css
@@ -556,6 +556,11 @@ body {
     margin-top: 10px;
   }
 }
+@media screen and (max-width: 425px) {
+  .block-paralax {
+    height: 240px;
+  }
+}
 @media screen and (max-width: 375px) {
   .home-section__wrap_title > a {
     font-size: 20px;
