--- a/bookAnEvent/css/styles.css
+++ b/bookAnEvent/css/styles.css
@@ -524,6 +524,10 @@ body {
     width: 35vw;
   }
 
+  .block-paralax {
+    height: 340px;
+  }
+
   .foot__wrap {
     display: inline-block;
     padding-top: 10px;
