--- a/bookAnEvent/styles/styles.scss
+++ b/bookAnEvent/styles/styles.scss
@@ -414,6 +414,10 @@ body {
     width: 35vw;
   }
 
+  .block-paralax {
+    height: 340px;
+  }
+
   .foot__wrap {
     display: inline-block;
     padding-top: 10px;
